<resources>
    <string name="app_name">VirtualFridge</string>

    <string name="email">E-mail</string>

    <string name="login_password">Password</string>
    <string name="login_login">Log in</string>
    <string name="login_google_error">Couldn\'t sign in with google</string>
    <string name="login_login_error">Oops… couldn\'t sign in</string>
    <string name="login_google">Sign in with google</string>
    <string name="login_register">Don\'t have account? Sign up</string>

    <string name="register_google">Sign up with google</string>
    <string name="register_register">Sign up</string>
    <string name="register_password">Password</string>
    <string name="register_first_name">First Name</string>
    <string name="register_last_name">Last Name</string>

    <string name="settings_logout">Log out</string>
    <string name="settings_title">Settings</string>

    <string name="board_delete_note">Are you sure you want to delete this note?</string>

    <string name="calendar_edit_event">Edit event</string>
    <string name="calendar_delete_event">Delete event</string>

    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="family_your_family_label">Your current family</string>
    <string name="family_your_family_leave_btn">Leave</string>
    <string name="family_invite_label">Invite member</string>
    <string name="family_invite_btn">Invite</string>
    <string name="family_invitations_label">Invitations</string>
    <string name="family_create_family_label">Create family</string>
    <string name="family_create_family_btn">Create</string>
    <string name="family_create_family_name">Family name</string>
    <string name="family_invitations_accept_btn">Accept</string>
    <string name="family_invitations_decline_btn">Decline</string>
    <string name="family_leave_family_alert">You have to leave family before accepting invitation</string>
    <string name="family_family_member_invited">Family member invited</string>

    <string name="create_event_title">Title</string>
    <string name="create_event_description">Description…</string>
    <string name="create_event_place">Place</string>
    <string name="create_event_start_date">Start date (dd/mm/yyyy)</string>
    <string name="create_event_end_date">End date (dd/mm/yyyy)</string>
    <string name="create_event_create_event">Create event</string>

    <string name="create_note_note">Note…</string>
    <string name="create_note_create_note">Create note</string>

    <string name="error_password">Password has to contain 6 or more characters.</string>
    <string name="error_field_required">This fields is required.</string>
    <string name="error_date">The date is invalid.</string>
    <string name="error_unknown">Oops something went wrong…</string>
    <string name="error_email">The e-mail address is invalid.</string>

    <string name="dialog_progress">Loading…</string>

    <string name="navigation_menu_board">Board</string>
    <string name="navigation_menu_calendar">Calendar</string>
    <string name="navigation_menu_family">Family</string>
</resources>
