<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.virtualfridge.domain.createEvent.CreateEventActivity"
    android:background="@color/main_background">

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_event_title"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/FormInputs"/>

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:hint="@string/create_event_description"
        android:inputType="text|textMultiLine"
        android:gravity="top"
        app:layout_constraintTop_toBottomOf="@+id/etTitle"
        style="@style/FormInputs"/>

    <EditText
        android:id="@+id/etPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/create_event_place"
        app:layout_constraintTop_toBottomOf="@+id/etDescription"
        style="@style/FormInputs"
        />

    <EditText
        android:id="@+id/etStartDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:hint="@string/create_event_start_date"
        app:layout_constraintTop_toBottomOf="@+id/etPlace"
        style="@style/FormInputs"/>

    <EditText
        android:id="@+id/etEndDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:hint="@string/create_event_end_date"
        app:layout_constraintTop_toBottomOf="@+id/etStartDate"

        style="@style/FormInputs"/>

    <Button
        android:id="@+id/btnCreateEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_event_create_event"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEndDate"

        style="@style/FormButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>