<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.virtualfridge.domain.register.RegisterActivity"
    android:background="@color/main_background">

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="15dp"
        style="@style/FormInputs"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="15dp"
        style="@style/FormInputs"/>

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_first_name"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="15dp"
        style="@style/FormInputs"/>

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_last_name"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/etFirstName"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="15dp"
        style="@style/FormInputs"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_register"
        app:layout_constraintTop_toBottomOf="@+id/etLastName"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="15dp"
        style="@style/FormButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>